--- a/src/main/webapp/app/order/po_entry.zul
+++ b/src/main/webapp/app/order/po_entry.zul
@@ -1,18 +1,18 @@
 <?page title="Index" contentType="text/html;charset=UTF-8"?>
 <zk xmlns:h="native">
-	<h:body>
+	<div apply="com.cupidocreative.zk.composer.ZkEntryPOComposer">
 		<include src="/app/shared/html_head.zul" />
 
-		<div sclass="row" width="50%">
+		<div sclass="row">
 			<div sclass="col-md-2">
-				<label value="Email" />
+				<label value="Email *" />
 			</div>
 			<div sclass="col-md-10">
 				<textbox cols="40" maxlength="60" id="txtEmail"
 					constraint="no empty,/.+@.+\.[a-z]+/: Masukkan e-mail" />
 			</div>
 		</div>
-		<div sclass="row" width="50%">
+		<div sclass="row">
 			<div sclass="col-md-2">
 				<label value="Nomor PO" />
 			</div>
@@ -20,9 +20,21 @@
 				<label id="lblPoNumber" />
 			</div>
 		</div>
-		<div sclass="row" width="50%">
+		<listbox id="lstPoDetail" checkmark="true" multiple="true"
+			use="com.cupidocreative.zk.ui.TabularEntry">
+			<listhead>
+				<listheader label="" width="30px" />
+				<listheader label="Jenis" />
+				<listheader label="Halaman" width="15%" />
+			</listhead>
+		</listbox>
+		<hbox>
+			<button id="btnAddRowDestination" label="Add row" />
+			<button id="btnDeleteDestination" label="Delete" />
+		</hbox>
+		<div sclass="row">
 			<div sclass="col-md-2">
-				<label value="Type" />
+				<label value="Type *" />
 			</div>
 			<div sclass="col-md-10">
 				<combobox id="cboType">
@@ -31,15 +43,18 @@
 				</combobox>
 			</div>
 		</div>
-		<div sclass="row" width="50%">
+		<div sclass="row">
 			<div sclass="col-md-2">
-				<label value="Halaman" />
+				<label value="Halaman *" />
 			</div>
 			<div sclass="col-md-10">
-			<spinner ></spinner>
+				<spinner constraint="no empty" maxlength="3" />
 			</div>
+		</div>
+		<div sclass="row">
+			<button sclass="btn-primary btn-block">Submit</button>
 		</div>
 
 		<include src="/app/shared/html_body.zul" />
-	</h:body>
+	</div>
 </zk>
