--- a/src/main/webapp/app/order/po_entry.zul
+++ b/src/main/webapp/app/order/po_entry.zul
@@ -21,7 +21,7 @@
 				<label id="lblPoNumber" />
 			</div>
 		</div>
-		<listbox id="lstPoDetail" checkmark="true" multiple="true"
+		<listbox id="lstPoDetails" checkmark="true"
 			use="com.cupidocreative.zk.ui.TabularEntry" hflex="min">
 			<listhead>
 				<listheader label="" hflex="min" />
